--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-astroid==2.1.0
-Django==2.1.5
-djangorestframework==3.9.0
+astroid==2.2.5
+Django==2.1.7
+djangorestframework==3.9.2
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
-psycopg2==2.7.6.1
-pylint==2.2.2
+psycopg2==2.7.7
+pylint==2.3.1
 pytz==2018.9
 six==1.12.0
+typed-ast==1.3.1
 wrapt==1.10.11
