--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-astroid==2.2.5
-Django==2.1.7
-djangorestframework==3.9.2
-isort==4.3.4
-lazy-object-proxy==1.3.1
+astroid==2.3.3
+Django==2.2.7
+djangorestframework==3.10.3
+isort==4.3.21
+lazy-object-proxy==1.4.3
 mccabe==0.6.1
-psycopg2==2.7.7
-pylint==2.3.1
-pytz==2018.9
-six==1.12.0
-typed-ast==1.3.1
-wrapt==1.10.11
+psycopg2-binary==2.8.4
+pylint==2.4.4
+pytz==2019.3
+six==1.13.0
+sqlparse==0.3.0
+typed-ast==1.4.0
+wrapt==1.11.2
